# you-are-merlin

./: Blog Post.md  Cargo.toml  README.md  game-structre.js  theme-data.js
js/: wasm-bindings.js
src/: actions.rs  battle_manager.rs  characters.rs  config.rs  encounter.rs  enemy.rs  event.rs  game_manager.rs  game_state.rs  items.rs  lib-old.rs  lib-wasm.rs  lib.rs  lib_cli_unused.rs  lib_wasm.rs  location.rs  main.rs  player.rs  player_state.rs  prompts.rs  text_format.rs  theme.rs  utilities.rs  world.rs
src/battle_manager/: mod.rs
src/characters/: enemy.rs  fighter.rs  mod.rs  player.rs  stats.rs
src/event/: battle_event.rs  boss_fight_event.rs  event_response.rs  game_over_event.rs  main_quest_event.rs  manage_event.rs  mod.rs  rest_event.rs  reward_event.rs  side_quest_event.rs  travel_event.rs  visit_event.rs
src/event/event_loop/: battle_event_loop.rs  event_loop_response.rs  mod.rs  rest_event_loop.rs
src/events/: battle_event.rs  event.rs  event_loop.rs  mod.rs  travel_event.rs  visit_event.rs  visiting_event.rs
src/events/event_loop/: battle_event_loop.rs  event_loop.rs  mod.rs
src/game_data/: entities.rs  mod.rs  world_builder.rs
src/game_manager/: battle_manager.rs  mod.rs  world_builder.rs
src/item/: armour.rs  artifact.rs  item_builder.rs  mod.rs  quest_item.rs  reward_type.rs  weapon.rs
src/theme/: mod.rs  theme_data.rs
src/theme/theme_data/: fallout.rs  game_of_thrones.rs  lord_of_the_rings.rs  merlin.rs  pokemon.rs  (+5 more)
tests/: balance_tests.rs  battle_tests.rs  item_tests.rs  player_stats_tests.rs  reward_tests.rs  theme_tests.rs
(+4 files in other folders)
