[package]
name = "you_are_merlin"
description = "A text adventure game built with Rust (obviously)"
version = "0.1.0"
edition = "2021"
authors = ["Harvey Seager <harvey.seager@googlemail.com>"]
repository = "https://github.com/hseager/you-are-merlin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[dependencies]
colored = "2.1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.92"
custom-print = "1.0.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CustomEvent'
]